# cookiecutter-poetry

./: .gitignore  Dockerfile  README.md  cookiecutter.json  generate-project.sh  run-cookiecutter.sh
.devcontainer/: devcontainer.json
hooks/: post_gen_project.py
{{ cookiecutter.__project_name_kebab_case }}/: .dockerignore  .env  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  delete-py-cache-files.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.dev.sh  start.prod.sh  start.sh
{{ cookiecutter.__project_name_kebab_case }}/.devcontainer/: devcontainer.json
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/: app.py  main.py
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/api/: __init__.py  api.py  request.py  response.py
{{ cookiecutter.__project_name_kebab_case }}/tests/: test_api.py  test_import.py
